--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: C++
 
 sudo: required
 
+before_install:
+  - test -n $CC  && unset CC
+  - test -n $CXX && unset CXX
+
 before_script:
   - wget https://developer.arm.com/-/media/Files/downloads/gnu-rm/6_1-2017q1/gcc-arm-none-eabi-6-2017-q1-update-linux.tar.bz2?product=GNU%20ARM%20Embedded%20Toolchain,64-bit,,Linux,6-2017-q1-update -O arm-gcc.tar.bz2
   - tar -jxf arm-gcc.tar.bz2
